# ChangeLog for dev-ruby/rack-openid
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack-openid/ChangeLog,v 1.4 2014/08/02 02:00:56 mrueg Exp $

  02 Aug 2014; Manuel Rüger <mrueg@gentoo.org> rack-openid-1.3.1.ebuild,
  rack-openid-1.4.2.ebuild:
  Add ruby20, ruby21 support.

  24 Apr 2014; Manuel Rüger <mrueg@gentoo.org> rack-openid-1.3.1.ebuild,
  rack-openid-1.4.2.ebuild:
  Remove ruby18 support.

*rack-openid-1.4.2 (16 Feb 2014)

  16 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +rack-openid-1.4.2.ebuild:
  Version bump. Add ruby20 target. Drop ruby18.

*rack-openid-1.3.1 (30 Apr 2013)

  30 Apr 2013; Hans de Graaff <graaff@gentoo.org> +rack-openid-1.3.1.ebuild,
  +metadata.xml:
  Initial import. Optional dependency for redmine. Imported from my overlay.