@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rack-openid
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack-openid/ChangeLog,v 1.4 2014/08/02 02:00:56 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rack-openid/ChangeLog,v 1.5 2015/04/27 05:55:53 graaff Exp $
+
+  27 Apr 2015; Hans de Graaff <graaff@gentoo.org> rack-openid-1.4.2.ebuild:
+  Add ruby22.
 
   02 Aug 2014; Manuel Rüger <mrueg@gentoo.org> rack-openid-1.3.1.ebuild,
   rack-openid-1.4.2.ebuild:
